tests/baselines/reference/collisionRestParameterClassMethod(strict=true).errors.txt
collisionRestParameterClassMethod.ts(2,28): error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
collisionRestParameterClassMethod.ts(8,12): error TS7010: 'f4', which lacks return-type annotation, implicitly has an 'any' return type.
collisionRestParameterClassMethod.ts(8,27): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
collisionRestParameterClassMethod.ts(9,12): error TS7010: 'f4', which lacks return-type annotation, implicitly has an 'any' return type.
collisionRestParameterClassMethod.ts(9,27): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
collisionRestParameterClassMethod.ts(10,24): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
collisionRestParameterClassMethod.ts(14,12): error TS7010: 'f4NoError', which lacks return-type annotation, implicitly has an 'any' return type.
collisionRestParameterClassMethod.ts(15,12): error TS7010: 'f4NoError', which lacks return-type annotation, implicitly has an 'any' return type.
collisionRestParameterClassMethod.ts(22,12): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
collisionRestParameterClassMethod.ts(22,28): error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
collisionRestParameterClassMethod.ts(23,12): error TS7010: 'fooNoError', which lacks return-type annotation, implicitly has an 'any' return type.
collisionRestParameterClassMethod.ts(25,12): error TS7010: 'f4', which lacks return-type annotation, implicitly has an 'any' return type.
collisionRestParameterClassMethod.ts(25,27): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
collisionRestParameterClassMethod.ts(26,12): error TS7010: 'f4', which lacks return-type annotation, implicitly has an 'any' return type.
collisionRestParameterClassMethod.ts(26,27): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
collisionRestParameterClassMethod.ts(27,12): error TS7010: 'f4NoError', which lacks return-type annotation, implicitly has an 'any' return type.
collisionRestParameterClassMethod.ts(28,12): error TS7010: 'f4NoError', which lacks return-type annotation, implicitly has an 'any' return type.
collisionRestParameterClassMethod.ts(32,16): error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.


==== collisionRestParameterClassMethod.ts (18 errors) ====
    class c1 {
        public foo(_i: number, ...restParameters) { //_i is error
                               ~~~~~~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
            var _i = 10; // no error
        }
        public fooNoError(_i: number) { // no error
            var _i = 10; // no error
        }
        public f4(_i: number, ...rest); // no codegen no error
               ~~
!!! error TS7010: 'f4', which lacks return-type annotation, implicitly has an 'any' return type.
                              ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
        public f4(_i: string, ...rest); // no codegen no error
               ~~
!!! error TS7010: 'f4', which lacks return-type annotation, implicitly has an 'any' return type.
                              ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
        public f4(_i: any, ...rest) { // error
                           ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
            var _i: any; // no error
        }
    
        public f4NoError(_i: number); // no error
               ~~~~~~~~~
!!! error TS7010: 'f4NoError', which lacks return-type annotation, implicitly has an 'any' return type.
        public f4NoError(_i: string); // no error
               ~~~~~~~~~
!!! error TS7010: 'f4NoError', which lacks return-type annotation, implicitly has an 'any' return type.
        public f4NoError(_i: any) { // no error
            var _i: any; // no error
        }
    }
    
    declare class c2 {
        public foo(_i: number, ...restParameters); // No error - no code gen
               ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
                               ~~~~~~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
        public fooNoError(_i: number); // no error
               ~~~~~~~~~~
!!! error TS7010: 'fooNoError', which lacks return-type annotation, implicitly has an 'any' return type.
    
        public f4(_i: number, ...rest); // no codegen no error
               ~~
!!! error TS7010: 'f4', which lacks return-type annotation, implicitly has an 'any' return type.
                              ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
        public f4(_i: string, ...rest); // no codegen no error
               ~~
!!! error TS7010: 'f4', which lacks return-type annotation, implicitly has an 'any' return type.
                              ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
        public f4NoError(_i: number); // no error
               ~~~~~~~~~
!!! error TS7010: 'f4NoError', which lacks return-type annotation, implicitly has an 'any' return type.
        public f4NoError(_i: string); // no error
               ~~~~~~~~~
!!! error TS7010: 'f4NoError', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    class c3 {
        public foo(...restParameters) {
                   ~~~~~~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
            var _i = 10; // no error
        }
        public fooNoError() {
            var _i = 10; // no error
        }
    }